<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="Statusbar Mods" />
    <com.wubydax.romcontrol.v2.prefs.MyListPreference android:entries="@array/immersive_entries" android:title="Statusbar View" android:key="policy_control" android:summary="%s" android:entryValues="@array/immersive_values" />
    <PreferenceScreen android:title="@string/dynamic_status_bar_title">
        <com.wubydax.romcontrol.v2.prefs.MyCheckBoxPreference android:title="@string/dynamic_status_bar_color_title" android:key="dynamic_status_bar_color_state" android:summary="@string/dynamic_status_bar_color_summary" android:defaultValue="0" />
        <com.wubydax.romcontrol.v2.prefs.MyListPreference android:entries="@array/dsb_gradient_filter_entries" android:title="@string/dynamic_status_bar_gradient_title" android:key="dynamic_status_bar_gradient_state" android:summary="@string/dynamic_status_bar_gradient_summary" android:defaultValue="0" android:entryValues="@array/dsb_gradient_filter_values" />
        <com.wubydax.romcontrol.v2.prefs.MyListPreference android:entries="@array/dsb_gradient_filter_entries" android:title="@string/dynamic_status_bar_filter_title" android:key="dynamic_status_bar_filter_state" android:summary="@string/dynamic_status_bar_filter_summary" android:defaultValue="0" android:entryValues="@array/dsb_gradient_filter_values" />
        <com.wubydax.romcontrol.v2.prefs.MySeekBarPreference android:persistent="false" android:title="@string/dynamic_status_bar_filter_value" android:key="dynamic_status_bar_filter_value" />
    </PreferenceScreen>
    <PreferenceScreen android:title="Battery Icon Settings" android:summary="Battery icon, colors, etc">
        <PreferenceCategory android:title="Battery Icon Settings" />
        <com.wubydax.romcontrol.v2.prefs.MyListPreference android:entries="@array/battery_icon_entries" android:title="Battery Icon Type" android:key="battery_icon_type" android:summary="%s" android:defaultValue="0" android:entryValues="@array/battery_icon_values" />
        <com.wubydax.romcontrol.v2.prefs.ColorPickerPreference android:title="Stock Icon Color" android:key="battery_icon_color" android:summary="Enable icon type to use" android:defaultValue="-1" hexValue="true" alphaSlider="true" />
        <com.wubydax.romcontrol.v2.prefs.ColorPickerPreference android:title="Stock Icon Bolt Color" android:key="battery_bolt_color" android:summary="Set charging bolt color" android:defaultValue="-15461356" hexValue="true" alphaSlider="true" />
        <com.wubydax.romcontrol.v2.prefs.MySwitchPreference android:title="Display Percentage" android:key="display_battery_percentage" android:defaultValue="true" android:summaryOn="Battery text shown" android:summaryOff="Battery text is hidden" />
        <com.wubydax.romcontrol.v2.prefs.ColorPickerPreference android:title="Percentage Color" android:key="battery_text_color" android:summary="Choose battery percent color" android:dependency="display_battery_percentage" android:defaultValue="-1" hexValue="true" alphaSlider="true" />
        <PreferenceScreen android:title="Battery Bar" android:summary="Graphical battery display">
            <PreferenceCategory android:title="Battery Bar" />
            <com.wubydax.romcontrol.v2.prefs.MyListPreference android:entries="@array/battery_bar_entries" android:title="Battery Bar" android:key="battery_bar" android:summary="%s" android:defaultValue="0" android:entryValues="@array/battery_bar_values" />
            <com.wubydax.romcontrol.v2.prefs.MySwitchPreference android:title="Battery bar animation" android:key="battery_bar_animate" android:defaultValue="true" android:summaryOn="Charging animation enabled" android:summaryOff="Animation disabled" />
            <com.wubydax.romcontrol.v2.prefs.MyListPreference android:entries="@array/battery_bar_style_entries" android:title="Battery bar style" android:key="battery_bar_style" android:summary="%s" android:defaultValue="1" android:entryValues="@array/battery_bar_style_values" />
            <com.wubydax.romcontrol.v2.prefs.MyListPreference android:entries="@array/battery_bar_thickness_entries" android:title="Thickness of battery bar" android:key="battery_bar_thickness" android:summary="%s" android:defaultValue="1" android:entryValues="@array/battery_bar_thickness_values" />
            <com.wubydax.romcontrol.v2.prefs.ColorPickerPreference android:title="Battery Bar Color" android:key="battery_bar_color" android:summary="Choose color of battery bar" android:defaultValue="-13388315" hexValue="true" alphaSlider="true" />
        </PreferenceScreen>
        <PreferenceScreen android:title="3Minit Battery Mod" android:summary="Enable icon type to use">
            <intent android:targetPackage="com.three.minit.minitbatterysettings.free" android:targetClass="com.three.minit.minitbatterysettings.MainActivity" />
        </PreferenceScreen>
    </PreferenceScreen>
    <PreferenceScreen android:title="Statusbar Lock Button" android:summary="Lock icon options">
        <PreferenceCategory android:title="Statusbar Lock Button" />
        <com.wubydax.romcontrol.v2.prefs.MyListPreference android:entries="@array/sysbar_lock" android:title="Statusbar Lock Button" android:key="sysbar_lock_button" android:summary="%s" android:defaultValue="0" android:entryValues="@array/sysbar_lock_values" />
        <com.wubydax.romcontrol.v2.prefs.ColorPickerPreference android:title="Lock Button Color" android:key="sysbar_lock_button_color" android:summary="Color of statusbar lock" android:defaultValue="-1" hexValue="true" alphaSlider="true" />
    </PreferenceScreen>
    <PreferenceScreen android:title="Statusbar Icon Toggles" android:summary="Show or hide options">
        <PreferenceCategory android:title="Statusbar Icons - Restart UI to Set" />
        <com.wubydax.romcontrol.v2.prefs.MySwitchPreference android:title="Alarm Icon" android:key="alarm_icon" android:defaultValue="true" android:summaryOn="Alarm icon is shown" android:summaryOff="Alarm icon now hidden" />
        <com.wubydax.romcontrol.v2.prefs.MySwitchPreference android:title="Bluetooth Icon" android:key="bluetooth_icon" android:defaultValue="true" android:summaryOn="Icon is shown" android:summaryOff="Icon is now hidden" />
        <com.wubydax.romcontrol.v2.prefs.MySwitchPreference android:title="Statusbar Ticker" android:key="ticker_toggle" android:defaultValue="true" android:summaryOn="Ticker is shown" android:summaryOff="Ticker is hidden" />
        <com.wubydax.romcontrol.v2.prefs.MySwitchPreference android:title="Vibrate/Silent Icon" android:key="volume_icon" android:defaultValue="true" android:summaryOn="Sound icons now shown" android:summaryOff="Sound icons now hidden" />
        <com.wubydax.romcontrol.v2.prefs.MySwitchPreference android:title="VoWiFi Icon" android:key="vowifi_icon" android:defaultValue="true" android:summaryOn="Icon will be shown" android:summaryOff="Icon is now hidden" />
    </PreferenceScreen>
    <PreferenceScreen android:title="Statusbar Icon Colors" android:summary="Select colors">
        <PreferenceCategory android:title="Statusbar Icon Colors" />
        <com.wubydax.romcontrol.v2.prefs.MySwitchPreference android:title="Use global color" android:key="sb_global_toggle" android:defaultValue="false" android:summaryOn="Enabled" android:summaryOff="Disabled" />
        <com.wubydax.romcontrol.v2.prefs.ColorPickerPreference android:title="Statusbar Global Color" android:key="sb_global_color" android:summary="Pick universal color" android:dependency="sb_global_toggle" android:defaultValue="-1" hexValue="true" alphaSlider="true" />
        <PreferenceCategory android:title="Individual Colors" />
        <com.wubydax.romcontrol.v2.prefs.ColorPickerPreference android:title="WiFi Icon Color" android:key="statusbar_wifi_color" android:summary="Pick color of wifi icon" android:defaultValue="-1" hexValue="true" alphaSlider="true" />
        <com.wubydax.romcontrol.v2.prefs.ColorPickerPreference android:title="Signalbar Icon Color" android:key="statusbar_signal_color" android:summary="Select color of signalbars" android:defaultValue="-1" hexValue="true" alphaSlider="true" />
        <com.wubydax.romcontrol.v2.prefs.ColorPickerPreference android:title="Data Icon Color" android:key="statusbar_data_color" android:summary="3G/4G/LTE data icon color" android:defaultValue="-1" hexValue="true" alphaSlider="true" />
        <com.wubydax.romcontrol.v2.prefs.ColorPickerPreference android:title="Notification Icons Color" android:key="statusbar_icon_color" android:summary="Volume, bluetooth, popups, etc.." android:defaultValue="-1" hexValue="true" alphaSlider="true" />
        <com.wubydax.romcontrol.v2.prefs.ColorPickerPreference android:title="Ticker Text Color" android:key="ticker_text_color" android:summary="Set color of statusbar text" android:defaultValue="-1" hexValue="true" alphaSlider="false" />
    </PreferenceScreen>
    <PreferenceCategory android:title="Network Traffic Meter">
        <PreferenceScreen android:title="Network traffic preferences">
            <PreferenceCategory android:title="Network data">
                <com.wubydax.romcontrol.v2.prefs.MyListPreference android:entries="@array/traffic_state_items" android:title="Displayed traffic info" android:key="network_traffic_state" android:defaultValue="0" android:entryValues="@array/traffic_state_values" app:dependentValue="0" />
                <com.wubydax.romcontrol.v2.prefs.MySwitchPreference android:title="Display data in Bytes" android:key="network_traffic_unit" android:dependency="network_traffic_state" android:defaultValue="false" android:summaryOn="Displayed in Bytes" android:summaryOff="Displayed in Bits (default)" />
            </PreferenceCategory>
            <PreferenceCategory android:title="Arrows display preferences" android:dependency="network_traffic_state">
                <com.wubydax.romcontrol.v2.prefs.MySwitchPreference android:title="Show traffic arrows" android:key="network_traffic_show_arrows" android:dependency="network_traffic_state" android:defaultValue="true" android:summaryOn="Arrows shown" android:summaryOff="Arrows hidden" />
                <com.wubydax.romcontrol.v2.prefs.MyListPreference android:entries="@array/arrow_position_entries" android:title="Arrows position" android:key="network_traffic_arrows_position" android:dependency="network_traffic_show_arrows" android:defaultValue="0" android:entryValues="@array/arrow_position_values" />
            </PreferenceCategory>
            <PreferenceCategory android:title="Display options" android:dependency="network_traffic_state">
                <com.wubydax.romcontrol.v2.prefs.MySwitchPreference android:title="Autohide on low traffic" android:key="network_traffic_autohide" android:defaultValue="false" android:summaryOn="Autohide enabled" android:summaryOff="Displayed always" />
                <com.wubydax.romcontrol.v2.prefs.MySeekBarPreference android:title="Autohide threshold" android:key="network_traffic_threshold" android:dependency="network_traffic_autohide" android:defaultValue="10" app:maxValue="100" app:unitsValue="Kb" />
                <com.wubydax.romcontrol.v2.prefs.MyListPreference android:entries="@array/traffic_style_entries" android:title="Font style" android:key="network_traffic_text_style" android:defaultValue="0" android:entryValues="@array/traffic_style_entry_values" />
                <com.wubydax.romcontrol.v2.prefs.MySeekBarPreference android:title="Text size scale factor" android:key="network_traffic_scale" android:defaultValue="10" app:minValue="5" app:maxValue="10" />
            </PreferenceCategory>
            <PreferenceCategory android:title="Network traffic colors" android:dependency="network_traffic_state">
                <com.wubydax.romcontrol.v2.prefs.MySwitchPreference android:title="Separate colors for elements" android:key="network_traffic_global_color" android:defaultValue="true" android:summaryOn="All elements can be colored separately" android:summaryOff="Global color will apply to all elements" />
                <com.wubydax.romcontrol.v2.prefs.ColorPickerPreference android:title="Global color" android:key="network_traffic_color" android:defaultValue="\#ffffff" />
                <com.wubydax.romcontrol.v2.prefs.ColorPickerPreference android:title="Upload text color" android:key="network_traffic_upload_color" android:dependency="network_traffic_global_color" android:defaultValue="\#ffffff" />
                <com.wubydax.romcontrol.v2.prefs.ColorPickerPreference android:title="Download text color" android:key="network_traffic_download_color" android:dependency="network_traffic_global_color" android:defaultValue="\#ffffff" />
                <com.wubydax.romcontrol.v2.prefs.ColorPickerPreference android:title="Traffic arrows color" android:key="network_traffic_arrow_color" android:dependency="network_traffic_global_color" android:defaultValue="\#ffffff" />
            </PreferenceCategory>
        </PreferenceScreen>
    </PreferenceCategory>
</PreferenceScreen>